--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         
         <div class="w3-col l4 s12">
-            <img src="images/Me_homeoffice.jpg" id="me" alt="Picture" width="100%" height="auto">
+            <img src="images/Headshot.jpg" id="me" alt="Picture" width="100%" height="auto">
         </div>
     </div>
     
