--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
                 <h2 style="padding-left: 2%">About Me</h2>
                 <p class="w3-text-grey" style="text-align: justify;padding: 2% 2% 2% 4%;font-size: 16px;">
 			I am a Ph.D. student at the University of California, Riverside in the Physics and Astronomy Department, working with 
-                    	Dr. Naveen Reddy on the baryon cycle. My research interest is galaxy formation and evolution, especially the connection 
-                    	between galaxies and the circumgalactic medium (CGM) and intergalactic medium (IGM). I study galactic-scale outflows 
-                    	and inflows of high-redshift star-forming galaxies using low-ionization interstellar metal absorption lines. My work 
-			uses high- and low-resolution spectroscopy of galaxies in the MOSDEF survey. Please visit my 
+			Dr. Naveen Reddy on the baryon cycle. My research interest is galaxy formation and evolution, especially the connection 
+			between galaxies, their circumgalactic medium (CGM), and intergalactic medium (IGM). I study cool, neutral, and warm, 
+			ionized outflows in star-forming galaxies at cosmic noon (z ~ 2) traced by low-ionization interstellar metal absorption 
+			and broad components of optical emission lines. My research utilizes the extensive spectroscopic dataset of the MOSFIRE 
+			Deep Evolution Field survey (MOSDEF) with additional deep observations from the Keck Low Resolution Imaging Spectrometer 
+			(LRIS) and integral field (IFU) spectroscopy from the Keck Cosmic Web Imager (KCWI). Please visit my 
 			<a href="https://Astro-Weldon.github.io/pages/research.html">Research page</a> for more information.
                 </p>
         </div>
