--- a/pages/research.html
+++ b/pages/research.html
@@ -75,7 +75,7 @@
         </div>
 	    
 	<div class="w3-col l4">
-            <p></p>
+            <image src="/images/inflow.jpg" alt="Test" width="100%" height="auto">
         </div>
 	    
 	<div class="w3-col l6 s12">
