--- a/pages/research.html
+++ b/pages/research.html
@@ -58,7 +58,6 @@
 			from the interstellar medium (ISM) into the surrounding CGM and possibly beyond into the IGM plays a crucial role in 
                     	galaxy evolution. 
 		</p>
-		
 		<p class="w3-text-grey" style="text-align: justify;padding: 2%;font-size: 16px;">
 			In my dissertation research, I focus on characterizing galactic-scale outflows from star-forming galaxies during cosmic
 			noon (z ~ 1 – 3, the peak of the cosmic star-formation history). My research utilizes the extensive spectroscopic dataset 
@@ -71,12 +70,12 @@
     </div>
 
     <div class="w3-row" style="margin-top: 64px">
-	<h2 style="padding-left: 2%">Current Research</h2>
+	<h2 style="text-align: center">Current Research</h2>
 	<div class="w3-col l1">
     	    <p></p>
         </div>
 	    
-	<div class="w3-col l4">
+	<div class="w3-col l5">
             <p class="w3-text-grey" style="text-align: justify; padding: 2% 2% 2% 4%; font-size: 16px;">
 		    Due to the resonant scattering of Lyα photons as they escape the interstellar medium, halos of 
 		    Lyα emission extending several kpc around galaxies are frequently used to probe the kinematics and
@@ -87,7 +86,7 @@
 	    </p>
         </div>
 	    
-	<div class="w3-col l6 s12">
+	<div class="w3-col l7 s12">
 		<p class="w3-text-grey" style="text-align: justify; padding: 2% 2% 2% 4%; font-size: 16px;">
 			The underlying broad components of strong rest-optical emissions lines have received attention for 
 			probing the mass loss rate, efficiency, and energetics of warm ionized gas outflows. However, due to
