--- a/pages/research.html
+++ b/pages/research.html
@@ -59,10 +59,10 @@
                     	galaxy evolution. 
 			<br> <br>
 			In my dissertation research, I focus on characterizing galactic-scale outflows from star-forming galaxies during cosmic
-			noon (z ~ 1 – 3, the peak of the cosmic star-formation history). My research utilizes the extensive spectroscopic dataset 
+			noon (z ∼ 1 – 3, the peak of the cosmic star-formation history). My research utilizes the extensive spectroscopic dataset 
 			of the MOSFIRE Deep Evolution Field survey (MOSDEF) with additional deep observations from the Keck Low Resolution Imaging 
 			Spectrometer (LRIS) and integral field (IFU) spectroscopy from the Keck Cosmic Web Imager (KCWI). This combination of strong 
-			rest-optical emission and rest-UV absorption lines creat an ideal dataset to investigate both the warm ionized 
+			rest-optical emission and rest-UV absorption lines creates an ideal dataset to investigate both the warm ionized 
 			(~10<sup>4</sup> K) and cool neutral (~10<sup>3</sup> K) gas outflows on an individual galaxy basis. 
                 </p>
         </div>
@@ -74,15 +74,15 @@
     	    <p></p>
         </div>
 	    
-	<div class="w3-col l5">
-            <p class="w3-text-grey" style="text-align: justify; padding: 2% 2% 2% 4%; font-size: 16px;">
-		    Due to the resonant scattering of Lyα photons as they escape the interstellar medium, halos of 
-		    Lyα emission extending several kpc around galaxies are frequently used to probe the kinematics and
-		    distribution of neutral gas in the circumgalactic medium. Currently, I am analyzing KCWI observations 
-		    from a blind search for Lyα halos around typical z ∼ 2 star-forming galaxies. By creating several
-		    composite spectra, I will measure how the properties of the Lyα profile vary both with galactic properties 
-		    and spatially across the halo.
-	    </p>
+	<div class="w3-col l5 s12">
+		<p class="w3-text-grey" style="text-align: justify; padding: 2% 2% 2% 4%; font-size: 16px;">
+			Due to the resonant scattering of Lyα photons as they escape the interstellar medium, halos of 
+			Lyα emission extending several kpc around galaxies are frequently used to probe the kinematics and
+			distribution of neutral gas in the circumgalactic medium. Currently, I am analyzing KCWI observations 
+			from a blind search for Lyα halos around typical z ∼ 2 star-forming galaxies. By creating several
+			composite spectra, I will measure how the properties of the Lyα profile vary both with galactic properties 
+			and spatially across the halo.
+		</p>
         </div>
 	    
 	<div class="w3-col l5 s12">
@@ -93,9 +93,9 @@
 			for these properties in star-forming galaxies. Currently, I am expanding upon the earlier work of 
 			<a href="https://ui.adsabs.harvard.edu/abs/2019ApJ...873..102F/abstract">Freeman et al. 2019</a>
 			to characterize the properties of ionized gas outflows from individual star-forming galaxies 
-			at 𝑧 ∼ 2 using the completed MOSDEF Survey. More precisely, I am searching for broad emission components in 
-			the Hα and [O III] emission lines, from which I will derive their mass loss rates and energetics 
-			(i.e., mass, energy, and momentum loading factors).
+			at z ∼ 2 using the completed MOSDEF Survey. More precisely, I am searching for broad emission components in 
+			the Hα and [O III] emission lines, from which I will derive the mass loss rates and energetics 
+			(i.e., mass, energy, and momentum loading factors) of the outflows.
 		</p>
         </div>
     </div>
@@ -114,12 +114,12 @@
 		<h2 style="padding-left: 2%">Inflows</h2>
 		<p class="w3-text-grey" style="text-align: justify; padding: 2% 2% 2% 4%; font-size: 16px;">
 			The accretion of pristine gas from the intergalactic medium into galaxies is required to replenish 
-			their gas reservoir and sustain their star-formation throughout their evolution. While the basic 
+			their gas reservoir and sustain star-formation throughout their evolution. While the basic 
 			theoretical predictions of accretion are well established, direct observations of accretion have 
-			remained sparse. In Weldon et al. 2023, we present three star-forming galaxies at 𝑧 ∼ 2 with robust 
+			remained sparse. In Weldon et al. 2023, we present three star-forming galaxies at z ∼ 2 with robust 
 			measurements of redshifted low-ionization absorption metal lines tracing inflowing gas. The detection 
 			of three galaxies with significant inflows from a larger spectroscopic sample of 131 galaxies implies a 
-			small inflow covering fraction of ~2%. Galaxies with detected inflows and redward-skewed absorption line 
+			small inflow covering fraction of ∼2%. Galaxies with detected inflows and redward-skewed absorption line 
 			profiles do not show unique galactic properties relative to other galaxies. Additionally, within the sample, 
 			the covering fraction of inflowing gas decreases rapidly with increasing velocity, such that most inflowing 
 			gas is masked by more prevalent outflowing gas. Together, these results imply that the low detection rate of
@@ -151,8 +151,9 @@
 			We found that outflow velocities are marginally correlated with global SFR, but independent of SFR surface density 
 			(&Sigma;<sub>SFR</sub>). The scaling between outflow velocity and SFR agrees with predictions of outflows driven by 
 			mechanical energy from supernovae explosions, rather than radiation pressure acting on dusty material. Additionally, the 
-			relationship between outflow velocity and &Sigma;<sub>SFR</sub> normalized by stellar mass (&Sigma;<sub>sSFR</sub>) suggests that there 
-                        is a threshold &Sigma;<sub>sSFR</sub>, above which strong outflows are common regardless of &Sigma;<sub>sSFR</sub>.
+			relationship between outflow velocity and &Sigma;<sub>SFR</sub> normalized by stellar mass (&Sigma;<sub>sSFR</sub>) 
+			suggests that there is a threshold &Sigma;<sub>sSFR</sub>, above which strong outflows are common regardless of 
+			&Sigma;<sub>sSFR</sub>.
 			<br> <br>
 			<a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220309539W/abstract">Read the Paper!</a>
                 </p>
@@ -176,11 +177,11 @@
 			The interstellar gas-phase metallicity of galaxies is the result of metal enrichment from star formation 
 			and the cycling of gas between galaxies and their environment. Measuring how metallicity evolves with stellar 
 			mass is a key test for our current understanding of physical processes that govern star formation in galaxies. 
-			In Weldon et al. (2020), we measured the mass-metallicity (MZ) relation in a sample of low-mass metal-poor galaxies 
-			at z~0.8. Using oxygen abundances measured with the T<sub>e</sub> method and robust stellar masses, we found that 
-			the z~0.8 MZ relation is similar to the local MZ relation, but offset towards lower metallicity at a given stellar 
-			mass, as expected. Additionally, we investigated whether the MZ relation has a secondary dependency on the SFR, 
-			such that the MZ relation is part of a larger non-evolving metallicity relation, but found no significant dependence on SFR.
+			In Weldon et al. (2020), we measured the mass-metallicity relation (MZR) in a sample of low-mass metal-poor galaxies 
+			at z ∼ 0.8. Using oxygen abundances measured with the T<sub>e</sub> method and robust stellar masses, we found that 
+			the z ∼ 0.8 MZR is similar to the local MZR, but offset towards lower metallicity at a given stellar 
+			mass, as expected. Additionally, we investigated whether the MZR has a secondary dependency on the SFR, 
+			such that the MZR is part of a larger non-evolving metallicity relation, but found no significant dependence on SFR.
 			<br> <br>
 			<a href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.491.2254W/abstract">Read the Paper!</a>
                 </p>
